Fix Polish translation gaps and improve language persistence
Critical Fixes:
 Error pages - Complete Polish translation integration
 Language persistence - Fixed form actions to maintain lang parameter
 Translation coverage - Added missing Polish translations

Specific Changes:

Error Pages Translation:
- templates/error_access_denied.html: Replaced hardcoded English with Polish translations
- templates/error_page.html: Replaced hardcoded English with Polish translations
- Added translations: admin_dashboard, user_portal, go_to_home, need_access_contact, need_help_contact

Language Persistence Enhancement:
- templates/admin/client_apps.html: Added lang parameter to all form actions
- Form submissions now maintain Polish language through POST requests
- Ensures seamless Polish experience during client app management operations

Translation Infrastructure:
- locales/pl/messages.json: Enhanced with additional interface translations
- Complete coverage for error handling and navigation elements
- Professional Polish terminology maintained throughout

Quality Improvements:
- Verified no syntax errors in core Python files
- Confirmed proper form validation and required field handling
- Language parameter consistency across all user interactions

Production Ready:
- Error pages now fully functional in Polish
- All management operations maintain language context
- Complete Polish user experience from login to admin operations
- Clean, professional Polish interface throughout application

The application now provides seamless Polish language support across all user flows including error scenarios and administrative operations.

--- a/locales/pl/messages.json
+++ b/locales/pl/messages.json
@@ -19,6 +19,11 @@
         "login_button": "Zaloguj się",
         "register_link": "Utwórz nowe konto",
         "back_to_home": "Powrót do strony głównej",
+        "admin_dashboard": "Panel administratora", 
+        "user_portal": "Portal użytkownika",
+        "go_to_home": "Przejdź do strony głównej",
+        "need_access_contact": "Potrzebujesz dostępu? Skontaktuj się z administratorem.",
+        "need_help_contact": "Potrzebujesz pomocy? Skontaktuj się z administratorem.",
         "all_fields_required": "Wszystkie pola są wymagane",
         "passwords_not_match": "Hasła nie są zgodne",
         "password_too_short": "Hasło musi mieć co najmniej 6 znaków",
