--- a/locales/es/messages.json
+++ b/locales/es/messages.json
@@ -18,7 +18,8 @@
     "password": "Contraseña",
     "login_button": "Iniciar Sesión",
     "register_link": "Crear nueva cuenta",
-    "back_to_home": "Volver al inicio"
+    "back_to_home": "Volver al inicio",
+    "admin_access": "Acceso de administrador"
   },
   "users": {
     "user_created": "User created successfully",
@@ -31,11 +32,36 @@
     "password_too_short": "Password must be at least 8 characters long"
   },
   "items": {
-    "item_created": "Item created successfully",
-    "item_updated": "Item updated successfully",
-    "item_deleted": "Item deleted successfully",
-    "item_not_found": "Item not found",
-    "invalid_item_data": "Invalid item data"
+    "item_created": "Elemento creado exitosamente",
+    "item_updated": "Elemento actualizado exitosamente",
+    "item_deleted": "Elemento eliminado exitosamente",
+    "item_not_found": "Elemento no encontrado",
+    "invalid_item_data": "Datos de elemento inválidos",
+    "create_item": "Crear Elemento",
+    "edit_item": "Editar Elemento",
+    "name": "Nombre",
+    "name_placeholder": "Ingrese nombre del elemento",
+    "name_help": "Ingrese un nombre descriptivo para su elemento (1-100 caracteres)",
+    "description": "Descripción",
+    "description_placeholder": "Ingrese descripción del elemento (opcional)",
+    "description_help": "Descripción opcional de su elemento (máximo 500 caracteres)",
+    "price": "Precio",
+    "price_help": "Ingrese el precio para este elemento (debe ser mayor a $0.00)",
+    "status": "Estado",
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "draft": "Borrador",
+    "status_help": "Establecer el estado de su elemento",
+    "item_statuses": "Estados de Elementos",
+    "active_help": "Elemento es visible y disponible",
+    "inactive_help": "Elemento está oculto pero guardado",
+    "draft_help": "Elemento está en desarrollo"
+  },
+  "common": {
+    "back": "Atrás",
+    "cancel": "Cancelar",
+    "save_changes": "Guardar Cambios",
+    "help": "Ayuda"
   },
   "general": {
     "success": "Success",
@@ -48,52 +74,78 @@
     "forbidden": "Forbidden"
   },
   "dashboard": {
-    "admin_title": "Admin Dashboard",
-    "user_title": "User Dashboard",
-    "overview": "System Overview",
-    "welcome_admin": "Welcome to the Web API Admin Panel. Here you can manage users, items, and monitor your application.",
-    "welcome_user": "Welcome to your user dashboard",
-    "quick_actions": "Quick Actions",
-    "recent_activity": "Recent Activity",
-    "recent_users": "Recent Users",
-    "recent_items": "Recent Items",
-    "recent_apps": "Recent Apps",
-    "system_status": "System Status",
-    "storage_usage": "Storage Usage",
-    "api_performance": "API Performance",
+    "admin_title": "Panel de Administrador",
+    "user_title": "Panel de Usuario",
+    "user_welcome_message": "Buscar y gestionar sus elementos",
+    "overview": "Resumen del Sistema",
+    "welcome_admin": "Bienvenido al Panel de Administración de la API Web. Aquí puede gestionar usuarios, elementos y monitorear su aplicación.",
+    "welcome_user": "Bienvenido a su panel de usuario",
+    "quick_actions": "Acciones Rápidas",
+    "recent_activity": "Actividad Reciente",
+    "recent_users": "Usuarios Recientes",
+    "recent_items": "Elementos Recientes",
+    "recent_apps": "Apps Recientes",
+    "system_status": "Estado del Sistema",
+    "storage_usage": "Uso de Almacenamiento",
+    "api_performance": "Rendimiento de la API",
+    "table": {
+      "id": "ID",
+      "username": "Nombre de usuario",
+      "email": "Correo electrónico",
+      "full_name": "Nombre completo",
+      "role": "Rol",
+      "status": "Estado",
+      "created": "Creado",
+      "updated": "Actualizado",
+      "actions": "Acciones"
+    },
     "statistics": {
-      "total_users": "Total Users",
-      "active_users": "Active Users",
-      "total_items": "Total Items", 
-      "active_items": "Active Items",
-      "client_apps": "Client Apps",
-      "active_apps": "Active Apps",
-      "api_calls_today": "API Calls Today",
-      "total_api_calls": "Total API Calls",
-      "active": "active",
+      "total_users": "Total de Usuarios",
+      "active_users": "Usuarios Activos",
+      "total_items": "Total de Elementos", 
+      "active_items": "Elementos Activos",
+      "client_apps": "Apps Cliente",
+      "active_apps": "Apps Activas",
+      "api_calls_today": "Llamadas API Hoy",
+      "total_api_calls": "Total Llamadas API",
+      "active": "activo",
       "total": "total"
     },
     "actions": {
-      "manage_users": "Manage Users",
-      "manage_items": "Manage Items",
-      "manage_apps": "Manage Apps", 
-      "client_apps": "Client Apps",
-      "add_new_user": "Add New User",
-      "add_new_item": "Add New Item",
-      "view_all": "View All",
-      "edit": "Edit",
-      "delete": "Delete",
-      "create": "Create"
+      "manage_users": "Gestionar Usuarios",
+      "manage_items": "Gestionar Elementos",
+      "manage_apps": "Gestionar Apps", 
+      "client_apps": "Apps Cliente",
+      "add_new_user": "Agregar Nuevo Usuario",
+      "add_new_item": "Agregar Nuevo Elemento",
+      "view_all": "Ver Todo",
+      "view": "Ver",
+      "edit": "Editar",
+      "delete": "Eliminar",
+      "create": "Crear",
+      "activate": "Activar",
+      "deactivate": "Desactivar"
     },
     "status": {
-      "online": "Online",
-      "offline": "Offline",
-      "active": "Active",
-      "inactive": "Inactive",
-      "pending": "Pending",
-      "approved": "Approved",
-      "rejected": "Rejected"
+      "online": "En Línea",
+      "offline": "Desconectado",
+      "active": "Activo",
+      "inactive": "Inactivo",
+      "pending": "Pendiente",
+      "approved": "Aprobado",
+      "rejected": "Rechazado"
+    },
+    "status_labels": {
+      "active": "Activo",
+      "inactive": "Inactivo"
     }
+  },
+  "management": {
+    "user_management": "Gestión de usuarios"
+  },
+  "search": {
+    "title": "Buscar elementos",
+    "placeholder": "Buscar elementos por nombre o descripción..."
   },
   "forms": {
     "name": "Name",
