--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -18,7 +18,16 @@
     "password": "Password",
     "login_button": "Login",
     "register_link": "Create new account",
-    "back_to_home": "Back to home"
+    "back_to_home": "Back to home",
+    "access_admin_dashboard": "Access the administrative dashboard",
+    "access_user_portal": "Access user portal and search items",
+    "access_application": "Access the application",
+    "demo_credentials": "Demo credentials (copy and paste)",
+    "admin_access": "Admin access",
+    "user_access": "User access", 
+    "regular_user": "Regular user",
+    "admin": "Admin",
+    "user": "User"
   },
   "users": {
     "user_created": "User created successfully",
@@ -35,7 +44,32 @@
     "item_updated": "Item updated successfully",
     "item_deleted": "Item deleted successfully",
     "item_not_found": "Item not found",
-    "invalid_item_data": "Invalid item data"
+    "invalid_item_data": "Invalid item data",
+    "create_item": "Create Item",
+    "edit_item": "Edit Item",
+    "name": "Name",
+    "name_placeholder": "Enter item name",
+    "name_help": "Enter a descriptive name for your item (1-100 characters)",
+    "description": "Description", 
+    "description_placeholder": "Enter item description (optional)",
+    "description_help": "Optional description of your item (max 500 characters)",
+    "price": "Price",
+    "price_help": "Enter the price for this item (must be greater than $0.00)",
+    "status": "Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "draft": "Draft",
+    "status_help": "Set the status of your item",
+    "item_statuses": "Item Statuses",
+    "active_help": "Item is visible and available",
+    "inactive_help": "Item is hidden but saved",
+    "draft_help": "Item is being worked on"
+  },
+  "common": {
+    "back": "Back",
+    "cancel": "Cancel",
+    "save_changes": "Save Changes",
+    "help": "Help"
   },
   "general": {
     "success": "Success",
@@ -53,6 +87,7 @@
     "overview": "System Overview",
     "welcome_admin": "Welcome to the Web API Admin Panel. Here you can manage users, items, and monitor your application.",
     "welcome_user": "Welcome to your user dashboard",
+    "user_welcome_message": "Search and manage your items",
     "quick_actions": "Quick Actions",
     "recent_activity": "Recent Activity",
     "recent_users": "Recent Users",
@@ -81,9 +116,27 @@
       "add_new_user": "Add New User",
       "add_new_item": "Add New Item",
       "view_all": "View All",
+      "view": "View",
       "edit": "Edit",
       "delete": "Delete",
-      "create": "Create"
+      "create": "Create",
+      "activate": "Activate",
+      "deactivate": "Deactivate"
+    },
+    "table": {
+      "id": "ID",
+      "username": "Username",
+      "email": "Email", 
+      "full_name": "Full Name",
+      "role": "Role",
+      "status": "Status",
+      "created": "Created",
+      "updated": "Updated",
+      "actions": "Actions"
+    },
+    "status_labels": {
+      "active": "Active",
+      "inactive": "Inactive"
     },
     "status": {
       "online": "Online",
@@ -94,6 +147,18 @@
       "approved": "Approved",
       "rejected": "Rejected"
     }
+  },
+  "management": {
+    "user_management": "User Management",
+    "total_users": "Total Users",
+    "confirm_delete_user": "Are you sure you want to delete this user?",
+    "no_users_found": "No users found."
+  },
+  "search": {
+    "placeholder": "Search items by name or description...",
+    "title": "Search Items",
+    "no_results": "No results found",
+    "results_count": "results found"
   },
   "forms": {
     "name": "Name",
