--- a/locales/es/messages.json
+++ b/locales/es/messages.json
@@ -3,6 +3,23 @@
     "title": "WebAPI Starter",
     "description": "A comprehensive WebAPI Starter application with CRUD operations and API token authentication"
   },
+  "status": {
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "draft": "Borrador"
+  },
+  "table": {
+    "name": "Nombre",
+    "description": "Descripción",
+    "price": "Precio",
+    "status": "Estado",
+    "actions": "Acciones"
+  },
+  "actions": {
+    "dashboard": "Panel",
+    "dashboard_desc": "Ver tu resumen",
+    "add_new_item": "Agregar Nuevo Elemento"
+  },
   "auth": {
     "invalid_credentials": "Credenciales inválidas",
     "access_denied": "Acceso denegado",
@@ -23,7 +40,15 @@
     "admin_access_required": "Se requiere acceso de administrador",
     "currently_logged_as": "Actualmente conectado como",
     "please_login_admin": "Por favor, inicie sesión con una cuenta de administrador para continuar",
-    "admin_login_required": "Por favor, inicie sesión con credenciales de administrador"
+    "admin_login_required": "Por favor, inicie sesión con credenciales de administrador",
+    "regular_user": "Regular user",
+    "access_user_portal": "Access user portal and search items",
+    "access_admin_dashboard": "Access the administrative dashboard",
+    "user_access": "User access",
+    "access_application": "Access the application",
+    "admin": "Admin",
+    "demo_credentials": "Demo credentials (copy and paste)",
+    "user": "User"
   },
   "users": {
     "user_created": "User created successfully",
@@ -101,12 +126,17 @@
       "status": "Estado",
       "created": "Creado",
       "updated": "Actualizado",
-      "actions": "Acciones"
+      "actions": "Acciones",
+      "name": "Nombre",
+      "description": "Descripción",
+      "price": "Precio",
+      "owner": "Propietario",
+      "app_id": "ID de la app"
     },
     "statistics": {
       "total_users": "Total de Usuarios",
       "active_users": "Usuarios Activos",
-      "total_items": "Total de Elementos", 
+      "total_items": "Total de Elementos",
       "active_items": "Elementos Activos",
       "client_apps": "Apps Cliente",
       "active_apps": "Apps Activas",
@@ -118,7 +148,7 @@
     "actions": {
       "manage_users": "Gestionar Usuarios",
       "manage_items": "Gestionar Elementos",
-      "manage_apps": "Gestionar Apps", 
+      "manage_apps": "Gestionar Apps",
       "client_apps": "Apps Cliente",
       "add_new_user": "Agregar Nuevo Usuario",
       "add_new_item": "Agregar Nuevo Elemento",
@@ -145,11 +175,61 @@
     }
   },
   "management": {
-    "user_management": "Gestión de usuarios"
+    "user_management": "Gestión de usuarios",
+    "close": "Close",
+    "create_app": "Create App",
+    "client_apps_title": "Client Applications",
+    "description": "Description",
+    "token_modal_token": "Access Token:",
+    "usage_guide_title": "API Usage Guide",
+    "status_active": "Activo",
+    "confirm_regenerate_secret": "Regenerate app secret? The old secret will stop working.",
+    "description_placeholder": "Optional short description",
+    "updated": "Updated:",
+    "api_token_endpoint": "API Token Endpoint",
+    "token_modal_title": "Generated API Token",
+    "create_new_client_app": "Create New Client App",
+    "swagger_step2": "Click the Authorize button and enter your token",
+    "save_credentials_warning": "Important: Save your App ID and App Secret now. You won't be able to see the full secret again!",
+    "confirm_delete_app": "Are you sure you want to delete this app? This action cannot be undone.",
+    "created": "Created:",
+    "curl_example": "cURL Example",
+    "application_name_placeholder": "Enter application name (min 3 characters)",
+    "copy_token": "Copy Token",
+    "back_to_admin": "← Back to Dashboard",
+    "application_name_required": "Application Name (required)",
+    "app_secret": "App Secret",
+    "usage_step1": "1) Request an access token (POST):",
+    "swagger_ui": "Swagger UI",
+    "no_apps_description": "Create your first client app using the form above to get App ID and Secret for API access.",
+    "usage_examples": "Usage Examples",
+    "token_modal_app": "Application:",
+    "confirm_delete_user": "Are you sure you want to delete this user?",
+    "active": "Activo",
+    "swagger_step1": "Open",
+    "delete": "Eliminar",
+    "get_test_token": "Get Test Token",
+    "swagger_step3": "Use format",
+    "regenerate_secret": "Regenerate Secret",
+    "usage_step2": "2) Use the token to call protected endpoints:",
+    "no_users_found": "No users found.",
+    "total_users": "Total Users",
+    "client_apps_subtitle": "Create and manage client apps and API tokens",
+    "status_inactive": "Inactivo",
+    "python_example": "Python Example",
+    "deactivate": "Desactivar",
+    "activate": "Activar",
+    "token_modal_expires": "Expires:",
+    "no_apps_title": "No client apps yet",
+    "usage_step3": "3) In Swagger, click Authorize and paste your token as:",
+    "app_id": "App ID",
+    "success": "Success"
   },
   "search": {
     "title": "Buscar elementos",
-    "placeholder": "Buscar elementos por nombre o descripción..."
+    "placeholder": "Buscar elementos por nombre o descripción...",
+    "results_count": "results found",
+    "no_results": "No results found"
   },
   "forms": {
     "name": "Name",
